[project]
name = "indexor_core"
version = "0.2.3"
authors = [
    { name = "Andrew Luchuk", email = "andrew.luchuk@outlook.com"}
]
description = "The core libraries of the Indexor bot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1",
    "aiohttp>=3.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"